# tahoe-gpui

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
crates/mdstitch/: CHANGELOG.md  Cargo.toml  README.md
crates/mdstitch/proptest-regressions/: tests.txt
crates/mdstitch/src/: bracket.rs  detect_direction.rs  emphasis.rs  html_tags.rs  incomplete_code.rs  inline_code.rs  katex.rs  lib.rs  link_image.rs  options.rs  preprocess.rs  ranges.rs  single_tilde.rs  tests.rs  utils.rs
crates/remend/: Cargo.toml
crates/remend/proptest-regressions/: tests.txt
crates/remend/src/: comparison_operators.rs  detect_direction.rs  emphasis.rs  fence.rs  html_tags.rs  incomplete_code.rs  inline_code.rs  katex.rs  lib.rs  link_image.rs  options.rs  preprocess.rs  ranges.rs  setext_heading.rs  strikethrough.rs  tests.rs  utils.rs
crates/tahoe-gpui/: CLAUDE.md  Cargo.toml  build.rs
crates/tahoe-gpui/assets/icons/: NOTICE.md
crates/tahoe-gpui/docs/hig/: README.md  components.md  foundations.md  getting-started.md  inputs.md  patterns.md  technologies.md
crates/tahoe-gpui/docs/hig/components/: content.md  layout-and-organization.md  menus-and-actions.md  navigation-and-search.md  presentation.md  selection-and-input.md  status.md  system-experiences.md
crates/tahoe-gpui/examples/: alert_gallery.rs  auth_app.rs  button_gallery.rs  code_gallery.rs  component_gallery.rs  context.rs  dashboard_app.rs  icon_gallery.rs  liquid_glass_gallery.rs  liquid_glass_interactive.rs  list_app.rs  music_app.rs  streaming.rs  theme_gallery.rs  toolbar_app.rs  voice_demo.rs  window_layouts.rs  workflow_demo.rs
crates/tahoe-gpui/examples/gallery/: action_sheets.rs  activity_indicators.rs  activity_rings.rs  alerts.rs  avatars.rs  badges.rs  boxes.rs  button_groups.rs  buttons.rs  charts.rs  checkboxes.rs  collections.rs  color_wells.rs  colors.rs  combo_boxes.rs  context_menus.rs  copy_buttons.rs  date_pickers.rs  dialogs.rs  digit_entries.rs  disclosure_controls.rs  disclosure_groups.rs  flex_headers.rs  focus_groups.rs  forms.rs  gauges.rs  hover_cards.rs  image_views.rs  image_wells.rs  labels.rs  liquid_glass.rs  lists_and_tables.rs  materials.rs  menu_bar_and_dock.rs  menus.rs  modals.rs  navigation_bars.rs  notifications.rs  outline_views.rs  page_controls.rs  (+32 more)
crates/tahoe-gpui/src/: callback_types.rs  citation.rs  ids.rs  lib.rs  navigation_actions.rs  prelude.rs  test_helpers.rs  text_actions.rs
crates/tahoe-gpui/src/code/: agent.rs  ansi_parser.rs  api_endpoint.rs  artifact.rs  env_variables.rs  file_tree.rs  jsx_preview.rs  mod.rs  sandbox.rs  schema_display.rs  snippet.rs  terminal.rs  web_preview.rs
crates/tahoe-gpui/src/code/commit/: mod.rs  subcomponents.rs  tests.rs  types.rs
crates/tahoe-gpui/src/code/package_info/: mod.rs  tests.rs  types.rs
crates/tahoe-gpui/src/code/stack_trace/: mod.rs  tests.rs  types.rs
crates/tahoe-gpui/src/code/test_results/: mod.rs  subcomponents.rs  tests.rs  types.rs
crates/tahoe-gpui/src/components/: mod.rs
crates/tahoe-gpui/src/components/content/: avatar.rs  badge.rs  chart.rs  image_view.rs  label.rs  mod.rs  selectable_text.rs  text_view.rs  web_view.rs
crates/tahoe-gpui/src/components/layout_and_organization/: box_view.rs  collection_view.rs  column_view.rs  disclosure.rs  disclosure_group.rs  flex_header.rs  list.rs  lockup.rs  mod.rs  outline_view.rs  separator.rs  split_view.rs  tab_view.rs  table.rs
crates/tahoe-gpui/src/components/menus_and_actions/: activity_view.rs  button.rs  button_group.rs  button_like.rs  context_menu.rs  copy_button.rs  dock_menu.rs  edit_menu.rs  home_screen_quick_action.rs  menu_bar.rs  mod.rs  ornament.rs  popup_button.rs  pulldown_button.rs  share_button.rs
crates/tahoe-gpui/src/components/navigation_and_search/: mod.rs  navigation_bar.rs  navigation_split_view.rs  path_control.rs  search_bar.rs  search_field.rs  sidebar.rs  tab_bar.rs  token_field.rs  toolbar.rs
crates/tahoe-gpui/src/components/presentation/: action_sheet.rs  alert.rs  hover_card.rs  mod.rs  modal.rs  page_controls.rs  panel.rs  popover.rs  scroll_view.rs  sheet.rs  tooltip.rs  window.rs
crates/tahoe-gpui/src/components/selection_and_input/: checkbox.rs  color_well.rs  combo_box.rs  date_picker.rs  digit_entry.rs  image_well.rs  mod.rs  picker.rs  segmented_control.rs  slider.rs  stepper.rs  time_picker.rs  toggle.rs  virtual_keyboard.rs
crates/tahoe-gpui/src/components/status/: activity_indicator.rs  activity_ring.rs  gauge.rs  mod.rs  progress_indicator.rs  shimmer.rs  (+1 more)
crates/tahoe-gpui/src/context/: mod.rs  model.rs  ring.rs  usage.rs  widget.rs
crates/tahoe-gpui/src/foundations/: accessibility.rs  app_icon.rs  blink_manager.rs  branding.rs  color.rs  dark_mode.rs  images.rs  immersive_experiences.rs  inclusion.rs  keyboard.rs  keyboard_shortcuts.rs  layout.rs  materials.rs  mod.rs  motion.rs  overlay.rs  privacy.rs  right_to_left.rs  sf_symbols.rs  spatial_layout.rs  surface_scope.rs  text_truncation.rs  typography.rs  writing.rs
crates/tahoe-gpui/src/markdown/: animation.rs  caret.rs  mermaid.rs  mod.rs  renderer.rs  selectable_text.rs  selection.rs  settings.rs  syntax.rs
crates/tahoe-gpui/src/patterns/: charting_data.rs  collaboration_and_sharing.rs  drag_and_drop.rs  entering_data.rs  feedback.rs  file_management.rs  going_full_screen.rs  launching.rs  live_viewing_apps.rs  loading.rs  managing_accounts.rs  managing_notifications.rs  mod.rs  modality.rs  multitasking.rs  offering_help.rs  onboarding.rs  playing_audio.rs  playing_haptics.rs  playing_video.rs  printing.rs  ratings_and_reviews.rs  searching.rs  settings.rs  undo_and_redo.rs  workouts.rs
crates/tahoe-gpui/src/scripts/: extract_sf_symbol.py
crates/tahoe-gpui/src/voice/: audio_capture.rs  audio_player.rs  mic_selector.rs  mod.rs  persona.rs  speech_input.rs  transcription.rs  voice_selector.rs
crates/tahoe-gpui/src/workflow/: connection.rs  connection_line.rs  controls.rs  edge.rs  minimap.rs  mod.rs  node.rs  node_toolbar.rs  panel.rs  toolbar.rs  util.rs
(+88 files in other folders)
