[package]
name = "mdstitch"
description = "Streaming markdown preprocessor that closes unterminated syntax token-by-token."
readme = "README.md"
keywords = ["markdown", "streaming", "pulldown-cmark", "commonmark"]
categories = ["text-processing", "parser-implementations"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
