[package]
name = "tahoe-gpui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tahoe HIG-aligned UI components for GPUI"

[lints]
workspace = true

[features]
default = []
voice = ["dep:cpal"]
test-support = ["gpui/test-support", "dep:image"]

[dependencies]
# GPUI framework from Zed.
#
# We track the git repo at the `v0.231.1-pre` tag rather than
# crates.io `gpui = "0.2.2"` because the published crate is a much
# older snapshot of the same version number — it is missing APIs we
# rely on (`SvgRenderer::render_single_frame`, `ScrollStrategy::Nearest`,
# `PinchEvent` / `on_pinch`, `UniformListScrollHandle::scroll_to_bottom`,
# the three-argument `FocusHandle::focus(window, cx)`, etc.). Upgrade
# in lock-step with any `gpui_platform` / `gpui_macros` dev-deps below.
gpui = { version = "0.2.2", git = "https://github.com/zed-industries/zed", tag = "v0.231.1-pre" }

# Markdown auto-completion
remend = { version = "0.1.0", path = "../remend" }

# Markdown parsing
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }

# Pure-Rust Mermaid → SVG renderer (matches Zed's markdown crate: no `mmdc`
# binary dependency). Pairs with GPUI's `SvgRenderer::render_single_frame`
# to produce `RenderImage` bitmaps that the `img()` element displays.
# Default features (`cli`, `png`) are off — we only need the SVG path.
mermaid-rs-renderer = { version = "0.2.1", default-features = false }

# Grapheme cluster segmentation for cursor boundaries (emoji ZWJ, CJK composites).
unicode-segmentation = "1.12"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"

# Common grammars (feature-gated via tree-sitter)
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.5"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-sequel = "0.3"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Fast, deterministic hashing for caches (FNV-like, no seed randomisation).
rustc-hash = "2"

# Fast integer-to-string conversion for line number rendering.
itoa = "1"

# Structured diagnostics for dev-only warnings (e.g. the materials.rs
# blur/lens fallback). Transitively present via GPUI's `ztracing`, so the
# direct dep adds no extra compile cost.
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Optional
cpal = { version = "0.17", optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
gpui = { version = "0.2.2", git = "https://github.com/zed-industries/zed", tag = "v0.231.1-pre", features = ["test-support"] }
gpui_platform = { version = "0.1.0", git = "https://github.com/zed-industries/zed", tag = "v0.231.1-pre", features = ["font-kit"] }

# ── Examples ────────────────────────────────────────────────────────────────

[[example]]
name = "component_gallery"
path = "examples/component_gallery.rs"

[[example]]
name = "button_gallery"
path = "examples/button_gallery.rs"

[[example]]
name = "alert_gallery"
path = "examples/alert_gallery.rs"

[[example]]
name = "icon_gallery"
path = "examples/icon_gallery.rs"

[[example]]
name = "liquid_glass_gallery"
path = "examples/liquid_glass_gallery.rs"

[[example]]
name = "liquid_glass_interactive"
path = "examples/liquid_glass_interactive.rs"

[[example]]
name = "theme_gallery"
path = "examples/theme_gallery.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "code_gallery"
path = "examples/code_gallery.rs"

[[example]]
name = "context"
path = "examples/context.rs"

[[example]]
name = "workflow_demo"
path = "examples/workflow_demo.rs"

[[example]]
name = "window_layouts"
path = "examples/window_layouts.rs"

[[example]]
name = "voice_demo"
path = "examples/voice_demo.rs"
required-features = ["voice"]

# ── macOS 26 (Tahoe) UI Kit screen mockups ──────────────────────────────────

[[example]]
name = "auth_app"
path = "examples/auth_app.rs"

[[example]]
name = "music_app"
path = "examples/music_app.rs"

[[example]]
name = "list_app"
path = "examples/list_app.rs"

[[example]]
name = "dashboard_app"
path = "examples/dashboard_app.rs"

[[example]]
name = "toolbar_app"
path = "examples/toolbar_app.rs"
